# scft

./: .devcontainer.json  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: 0.1 LLN.ipynb
notebooks/Chapter 0/: 0.1 LLN.ipynb
